; ModuleID = '/home/carl/AnghaBench/linux/net/mac802154/extr_cfg.c_ieee802154_set_backoff_exponent.c'
source_filename = "/home/carl/AnghaBench/linux/net/mac802154/extr_cfg.c_ieee802154_set_backoff_exponent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpan_phy = type { i32 }
%struct.wpan_dev = type { i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wpan_phy*, %struct.wpan_dev*, i8*, i8*)* @ieee802154_set_backoff_exponent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ieee802154_set_backoff_exponent(%struct.wpan_phy* %0, %struct.wpan_dev* %1, i8* %2, i8* %3) #0 {
  %5 = alloca %struct.wpan_phy*, align 8
  %6 = alloca %struct.wpan_dev*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store %struct.wpan_phy* %0, %struct.wpan_phy** %5, align 8
  store %struct.wpan_dev* %1, %struct.wpan_dev** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %9 = call i32 (...) @ASSERT_RTNL()
  %10 = load i8*, i8** %7, align 8
  %11 = load %struct.wpan_dev*, %struct.wpan_dev** %6, align 8
  %12 = getelementptr inbounds %struct.wpan_dev, %struct.wpan_dev* %11, i32 0, i32 1
  store i8* %10, i8** %12, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = load %struct.wpan_dev*, %struct.wpan_dev** %6, align 8
  %15 = getelementptr inbounds %struct.wpan_dev, %struct.wpan_dev* %14, i32 0, i32 0
  store i8* %13, i8** %15, align 8
  ret i32 0
}

declare dso_local i32 @ASSERT_RTNL(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
